--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       <div class="spinner"><img src="client/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
         Room:
-        <select></select>
+        <select class = 'select'>
+          <option id = "lobby" selected>lobby</option>
+            <!-- added above rooms temporarily delete after making it dynamic -->
+        </select>
         <button>Add Room</button>
       </div>
       <form action="#" id="send" method="post">
