working on getting the friends to change color, most other functionality works already. the lobby refresh only happens initially to avoid overwritting what lobby we are in. maybe add a manually refresh button too

--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
       <div id="rooms">
         Room:
         <select class = 'select'>
-          <option id = "lobby" selected>lobby</option>
-            <!-- added above rooms temporarily delete after making it dynamic -->
         </select>
-        <button>Add Room</button>
+        <button class = "button" name='button' type = 'button'>Create Room</button>
       </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
